--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta content-type="text/html" charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>code.ponybaba.com</title>
+        <title>编码-谱瑞巴巴</title>
     </head>
     <body>
         <br><br><br><br><br><br>
-        <h1 style="text-align: center; font-size:1.5rem; margin-top:3rem;">code.ponybaba.com</h1>
+        <h1 style="text-align: center; font-size:1.5rem; margin-top:3rem;">撸码</h1>
         <p style="text-align:center;">ponybaba.cn </p>
 
     </body>
